--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proxy server for sdc",
   "main": "server/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon /server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/hrr36-sdc-t2/pl61-proxy/issues"
   },
-  "homepage": "https://github.com/hrr36-sdc-t2/pl61-proxy#readme"
+  "homepage": "https://github.com/hrr36-sdc-t2/pl61-proxy#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "newrelic": "^5.6.1"
+  }
 }
