--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proxy server for sdc",
   "main": "server/",
   "scripts": {
-    "start": "nodemon /server"
+    "start": "node server/"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
     "newrelic": "^5.6.1"
   }
 }
